--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="tab-pane active" id="mainmenu">
     <h5 class="sidebar-title">Menu Principal</h5>
     <ul class="nav nav-pills nav-stacked nav-quirk">
-        <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
+        <li class="active"><a href="@Url.Action("Index", "Board")"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
         <li><a href="@Url.Action("Index", "Mail")"><i class="fa fa-inbox"></i> <span>Mail</span></a></li>
         <li><a href="@Url.Action("Index", "Groups")"><i class="fa fa-users"></i> <span>Grupos</span></a></li>
         <li><a href="maps.html"><i class="fa fa-map-marker"></i> <span>Maps</span></a></li>
