--- a/EduClass.Web/Views/Tests/Create.cshtml
+++ b/EduClass.Web/Views/Tests/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EduClass.Web.Infrastructure.ViewModels.TestViewModel
 
 @{
-    ViewBag.Title = "Crear Página Pública";
+    ViewBag.Title = "Crear Prueba Diagnostica";
 }
 
 <h2>Create</h2>
