--- a/EduClass.Web/Views/Groups/JoinStudent.cshtml
+++ b/EduClass.Web/Views/Groups/JoinStudent.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewBag.Title = "Unirse Grupo";
 }
-
 <h2>Unirse a un grupo</h2>
 <div class="panel panel-site-traffic col-md-8 col-md-offset-2">
     <div class="panel-heading">
@@ -11,7 +10,6 @@
             <li><a><i class="fa fa-refresh"></i></a></li>
         </ul>
         <h4 class="panel-title text-success">Unirse a un grupo mediante una clave</h4>
-        <p class="nomargin">Past 30 Days — Last Updated July 14, 2015</p>
     </div>
     <div class="panel-body">
         @using (Html.BeginForm())
@@ -20,11 +18,11 @@
 
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.Key, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Key, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Key, new { htmlAttributes = new { @class = "form-control input-lg", @style= "font-weight: bold;  text-align: center;" } })
                         @Html.ValidationMessageFor(model => model.Key, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -40,7 +38,7 @@
         <div>
             @Html.ActionLink("Back to List", "Index")
         </div>
-   
+
     </div>
     @Scripts.Render("~/bundles/jquery")
     <script src="~/Scripts/app/helpersSite.js"></script>
