--- a/EduClass.Web/Views/Menu/_menuTop.cshtml
+++ b/EduClass.Web/Views/Menu/_menuTop.cshtml
@@ -212,9 +212,9 @@
                     </button>
                     <ul class="dropdown-menu pull-right">
                         <li><a href="@Url.Action("Me", "Users")"><i class="glyphicon glyphicon-user"></i> Mi Perfil</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Preferencias de Cuenta</a></li>
+                        <li><a href="@Url.Action("Edit","Users")"><i class="glyphicon glyphicon-cog"></i> Preferencias de Cuenta</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-question-sign"></i> Ayuda</a></li>
-                        <li><a href="@Url.Action("SignOut", "Users")"><i class="glyphicon glyphicon-log-out"></i> Log Out</a></li>
+                        <li><a href="@Url.Action("SignOut", "Users")"><i class="glyphicon glyphicon-log-out"></i> Cerrar Sesión</a></li>
                     </ul>
                 </div>
             </li>
