--- a/EduClass.Web/Views/Users/ChangeAvatar.cshtml
+++ b/EduClass.Web/Views/Users/ChangeAvatar.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "SaveUploadedFile";
+    ViewBag.Title = "Cambiar Foto Perfil";
 }
 
 <div class="jumbotron">
-    <form action="~/Users/SaveUploadedFile" method="post" enctype="multipart/form-data" class="dropzone" id="dropzoneForm">
+    <form action="~/Users/ChangeAvatar" method="post" enctype="multipart/form-data" class="dropzone" id="dropzoneForm">
         <div class="fallback">
             <input name="file" type="file" multiple />
             <input type="submit" value="Upload" />
