--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -4,7 +4,8 @@
         <li class="active"><a href="@Url.Action("Index", "Board")"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
         <li><a href="@Url.Action("Index", "Mail")"><i class="fa fa-inbox"></i> <span>Mail</span></a></li>
         <li><a href="@Url.Action("Index", "Groups")"><i class="fa fa-users"></i> <span>Grupos</span></a></li>
-        <li><a href="maps.html"><i class="fa fa-map-marker"></i> <span>Maps</span></a></li>
+        <li><a href="@Url.Action("Index", "FilesLibrary")"><i class="fa fa-folder"></i> <span>Mis Archivos</span></a></li>
+        <li><a href="@Url.Action("GetContacts", "Groups")"><i class="fa fa-book"></i> <span>Contactos</span></a></li>
     </ul>
 
     <h5 class="sidebar-title">Main Menu</h5>
